--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.mantine-uu5h5h {
+  font-family: Roboto, sans-serif !important;
+}
