feat(ui/ux): improved authentication form design and added new icon pack

--- a/src/common/components/atoms/Button/Button.scss
+++ b/src/common/components/atoms/Button/Button.scss
@@ -5,7 +5,7 @@
 
 // variants
 .primary {
-  background-color: var(--mantine-color-gray-9);
+  background-color: #146eb4;
   &:hover {
     background-color: var(--mantine-color-gray-9);
   }
