--- a/src/common/components/atoms/Table/Table.scss
+++ b/src/common/components/atoms/Table/Table.scss
@@ -9,7 +9,7 @@ table {
   width: 100%;
 
   thead {
-    background-color: var(--mantine-color-gray-9);
+    background-color: #146eb4;
     color: var(--mantine-color-gray-0);
 
     tr {
