--- a/src/common/components/atoms/Input/Input.scss
+++ b/src/common/components/atoms/Input/Input.scss
@@ -1,12 +1,12 @@
 .mantine-TextInput-label {
-  font-size: var(--mantine-font-size-xxs);
+  font-size: var(--mantine-font-size-sm);
   font-weight: 700;
 }
 
 .mantine-TextInput-input {
   border-radius: var(--mantine-radius-xs);
   border: solid 1px var(--mantine-color-gray-9);
-  font-size: var(--mantine-font-size-sm);
+  font-size: var(--mantine-font-size-xs);
   color: var(--mantine-color-gray-4);
   font-weight: 700;
   width: 100%;
