--- a/src/common/components/organisms/LoginSection/LoginSection.scss
+++ b/src/common/components/organisms/LoginSection/LoginSection.scss
@@ -7,5 +7,6 @@
   padding: 80px 40px;
   margin: 0 auto;
   background: #ffffff;
-  border-radius: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 6px #1a181e0a;
 }
