--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background-color: #969696 !important;
+  background-color: #146EB4 !important;
   color: #1d1d1d !important;
   font-family: "Roboto", sans-serif !important;
 }
@@ -16,4 +16,11 @@ body {
 
 .mantine-uu5h5h {
   font-family: Roboto, sans-serif !important;
+}
+
+.flex.justify-content-between.align-items-center {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
